@@ -43,6 +43,7 @@ public class ATSConstants {
   public static final String APPLICATION_ATTEMPT_ID = "applicationAttemptId";
   public static final String CONTAINER_ID = "containerId";
   public static final String NODE_ID = "nodeId";
+  public static final String NODE_HTTP_ADDRESS = "nodeHttpAddress";
   public static final String USER = "user";
 
   /* Keys used in other info */
